package NAntiRobot;

message TCaptchaResponse {
    optional string ImageUrl = 1;
    optional string VoiceUrl = 2;
    optional string VoiceIntroUrl = 3;
    required string Token = 4;
    optional int32 Https = 5;
    optional string Json = 6;
}
